Adds React SPA homepage to the Express Server API
- Implements a simple homepage for the Server API for all endpoints
to display if a user navigates to the Server.
- /api endpoints still send the appropriate data to the client.

*** React App ***
- Adds React dependent npm modules/dependencies.
- All React dependencies installed as dev dependencies, since we
only need to create the React App during development.
- We bundle it using webpack then server the bundle.js as a static
file from the Express server.

*** /public ***
- Adds robots.txt for search engine crawlers.
- Updates index.html with additional metadata and loads the webpack
bundle which contains the React App.
- Adds Next Gen Limitless small logo.

*** Server ***
- Updates /public directory for production build.

*** Webpack ***
- Adds webpack config files based on the client.
- Refactors based on the Express Server.

*** Docker ***
- Updates Dockerfile so that the entire directory is copied to the
builder container so webpack has access to the webpack config files.

*** Babel & ESLint ***
- Updates .babelrc and .eslintrc.js to use React presets/plugins & settings.

*** Styles ***
- Adds CSS normalization and resetting from:
    - normalize.scss
    - reset.local.scss
- Adds base CSS from index.scss.
- Implements styled-components to style the React App.
- Default colors and color handlers found in styled-components/colors.js
- Uses separation of concerns for styled-components.
    - Main file is styled.js which imports:
        - app.js
        - general.js
        - logo.js

--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<meta charset="UTF-8" />
+		<meta charset="UTF-8">
 		<meta
 			name="viewport"
-			content="width=device-width, initial-scale=1.0 shrink-to-fit=no"
+			content="width=device-width, initial-scale=1.0 user-scalable=yes"
 		/>
-		<title>Next Gen Limitless Server API &mdash; Out of this world technology</title>
-		<link rel="icon" href="/spaceship.svg" sizes="any" type="image/svg+xml">
+		<meta
+			name="description"
+			content="MongoDB, Express, Node.js Server API for the Next Gen LIMITLESS website. 🚀"
+		/>
+		<meta name="author" content="Reuben Smith" />
+		<title>
+			Next Gen Limitless Server API &mdash; Out of this world technology
+		</title>
+		<link rel="icon" href="/spaceship.svg" sizes="any" type="image/svg+xml" />
 	</head>
 	<body>
 		<div id="root"></div>
-		<h1>You&apos;ve made it to the Next Gen Limitless Server API.</h1>
 		<noscript> Please enable JavaScript to view this site. </noscript>
+
+		<!-- Webpack bundle -->
+		<script src="/bundle.js" type="application/javascript"></script>
 	</body>
 </html>
